menu changes, fix jumping, and more
among the menu changes: presents presets at
also, uses render distance to look at cycle through wall
fix stuff for input preview
tweak css
ability to actually add instant chats

--- a/styles/main.css
+++ b/styles/main.css
@@ -134,7 +134,8 @@ a { color: inherit; text-decoration: none; }
 	background:rgba(0,0,0,0.5);
 	color:white;
 	/*max-height:30%;*/width:100%;
-	word-wrap: break-word;
+	white-space: pre-wrap; 
+	word-break: break-word;
 	overflow:hidden;
 	font-family: inherit;
 	font-size:12pt;
@@ -165,7 +166,13 @@ a { color: inherit; text-decoration: none; }
 }
 #input input
 {
-	width:100%; border:none;
+	width:100%; width:calc( 100% - 100px );
+	border:none;
+}
+#input .input_preview, #input .input_preview *
+{
+	font-family: inherit;
+	font-size: 12pt;
 }
 
 #scoreboard
@@ -192,6 +199,15 @@ a { color: inherit; text-decoration: none; }
 	text-shadow: 0px 0px 10px #000;
 }
 
+.darktext2
+{
+	text-shadow: -1px 1px 0 #FFF, 1px 1px 0 #FFF, 1px -1px 0 #FFF, -1px -1px 0 #FFF;
+}
+.lighttext2
+{
+	text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000;
+}
+
 .progressbar, .notprogressbar
 {
 	width:150px; height: 16px;
@@ -206,4 +222,5 @@ a { color: inherit; text-decoration: none; }
 	background:#00FF00;
 	height:100%;width:0%;
 	position:relative;
+	border-radius: 2px;
 }
